@@ -34,7 +34,8 @@ IFvalue *select)
 
     NG_IGNORE(select);
 
-    if ( !cp_getvar( "scale", CP_REAL, (double*) &scale ) ) scale = 1;
+    if (!cp_getvar("scale", CP_REAL, &scale))
+        scale = 1;
 
     switch(param) 
     {   case BSIM4_W:
