@@ -204,7 +204,8 @@ INPgetModBin( CKTcircuit* ckt, char* name, INPmodel** model, INPtables* tab, cha
   int          error;
   double       scale;
 
-  if ( !cp_getvar( "scale", CP_REAL, (double*) &scale ) ) scale = 1;
+  if (!cp_getvar("scale", CP_REAL, &scale))
+      scale = 1;
 
   *model = NULL;
 
